--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Workflow"
+    "# Workflow\n",
+    "\n",
+    "There is two workflows for NMX, one for simulation and one for measurement data. <br>\n",
+    "This page will show simulation data workflow as an example. <br>\n",
+    "They are written with ``sciline``, so we will show how to collect ``providers`` and ``parameters`` to build a workflow pipeline and compute the required result. <br>\n",
+    "\n",
+    "First, we will set up scipp logging widget in the notebook."
    ]
   },
   {
@@ -13,8 +19,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Collect Parameters\n",
-    "params = dict()"
+    "# Logging widget\n",
+    "from scipp.logging import get_log_widget, make_widget_handler, get_logger, WidgetHandler\n",
+    "\n",
+    "sc_logger = get_logger()\n",
+    "if not any([hdlr for hdlr in sc_logger.handlers if isinstance(hdlr, WidgetHandler)]):\n",
+    "    sc_logger.addHandler(make_widget_handler())\n",
+    "    sc_logger.setLevel('DEBUG')\n",
+    "    sc_logger.info('NMX Data reduction - part 1.')\n",
+    "\n",
+    "get_log_widget()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TL;DR\n",
+    "\n",
+    "If you don't need to replace any providers or parameters, you can use the pre-defined pipeline."
    ]
   },
   {
@@ -23,83 +46,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "from enum import Enum\n",
-    "from ess.nmx.loader import InputFileName\n",
+    "from ess.nmx import build_workflow\n",
+    "from ess.nmx.loader import FileTypeMcStas\n",
+    "from ess.nmx.data import small_mcstas_sample\n",
+    "from ess.nmx.reduction import TimeBinned\n",
     "\n",
-    "class FileNames(Enum):\n",
-    "    \"\"\"Enum class for file names.\"\"\"\n",
-    "    file1 = '2e11.h5'\n",
-    "    file2 = 'x0_3d.h5'\n",
-    "    file3 = 'xe_0_NMX.h5'\n",
-    "    file4 = 'xe_20_NMX.h5'\n",
-    "    file5 = 'flip_det.h5'\n",
-    "    file6 = 'flip_4.h5'\n",
-    "    file7 = 'ye_0_NMX.h5'\n",
-    "    file8 = 'xe1_12_NMX/xe1_12_no_chunk.h5'\n",
-    "    file9 = '1d.h5'\n",
-    "    file10 = 'xflat20.h5'\n",
-    "    file11 = 'small_vis/flat.nxs'\n",
-    "    file12 = 'small_vis/shift_down.nxs'\n",
-    "    file13 = 'mc2_7_2_test.h5'\n",
-    "    file14 = 'mc2_new_comp.nxs'\n",
-    "    file15 = 'xflat20.h5'\n",
-    "    file16 = 'flat_h_r.h5'\n",
-    "    file17 = 'flat_v_u.h5'\n",
-    "    file18 = 'NMX_long.h5'\n",
-    "    file19 = 'pulse5.h5'\n",
-    "    file20 = 'pulse5_y.h5'\n",
-    "    file21 = 'wavelength.h5'\n",
-    "    file22 = 'wavelength_short1.h5'\n",
-    "    file23 = 'pulse5_z.h5'\n",
-    "    file24 = 'nexus-v3_2-with_detectors_stageZ_and_one_axis5.h5'\n",
-    "    file25 = 'xflat20.h5'\n",
+    "file_path = small_mcstas_sample()  # Replace it with your data file path\n",
     "\n",
-    "fname = 23\n",
-    "data_dir = Path('/home/sunyoung/ESS/data/nmx/')\n",
-    "\n",
-    "file_name = getattr(FileNames, f\"file{fname}\").value\n",
-    "file_path = data_dir / Path(file_name)\n",
-    "f_vis_path = data_dir / Path(file_name.replace('.h5', '_vis.nxs'))\n",
-    "\n",
-    "params[InputFileName] = str(file_path.absolute())\n",
-    "print(f\"Read from: {file_path}\")\n",
-    "print(f\"Write results into: {f_vis_path}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# f=snx.File(filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ess.nmx.detector import NumberOfDetectors, MaxNumberOfPixelsPerAxis, PixelStep\n",
-    "from ess.nmx.loader import MaximumPropability\n",
-    "from ess.nmx.reduction import TimeBinStep\n",
-    "\n",
-    "# Number of pixels per detectpr dimension\n",
-    "params[MaxNumberOfPixelsPerAxis] = 1280\n",
-    "params[PixelStep] = 100\n",
-    "\n",
-    "# Number of time bins \n",
-    "params[TimeBinStep] = 1\n",
-    "\n",
-    "# Number of detectors\n",
-    "params[NumberOfDetectors] = 1\n",
-    "\n",
-    "# Normalising highest prop-ability to \n",
-    "params[MaximumPropability] = 100000\n",
-    "\n",
-    "print(f\"Data points in output: \", params[MaxNumberOfPixelsPerAxis]**2*3)"
+    "nmx_workflow = build_workflow(file_path)\n",
+    "time_binned = nmx_workflow.compute(TimeBinned[FileTypeMcStas])\n",
+    "time_binned"
    ]
   },
   {
@@ -121,15 +77,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Collect Providers and Parameters\n",
+    "\n",
+    "There are helpers to collect providers and default parameters in ``ess.nmx.workflow`` module. <br>\n",
+    "If you need to replace any parameters, you can replace them in the dictionary and use it to build a pipeline. <br>\n",
+    "``build_workflow`` helper also accepts certain types as an argument to build a pipeline with, but not all types are supported by this helper. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scipp as sc\n",
+    "from ess.nmx.workflow import collect_default_parameters, collect_providers\n",
+    "from ess.nmx.loader import InputFileName\n",
     "\n",
-    "# Parameters to load the file:\n",
-    "sc.DataGroup({param_t.__name__: val for param_t, val in params.items()})"
+    "# Collect Providers\n",
+    "providers = collect_providers()\n",
+    "\n",
+    "# Collect Parameters\n",
+    "params = collect_default_parameters()\n",
+    "\n",
+    "# Add ``InputFileName`` parameter. It is not included in the default parameters.\n",
+    "params[InputFileName] = small_mcstas_sample()\n",
+    "\n",
+    "# Parameters to run the workflow:\n",
+    "sc.DataGroup({param_t.__name__: val for param_t, val in params.items()})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build Pipeline"
    ]
   },
   {
@@ -139,32 +124,28 @@
    "outputs": [],
    "source": [
     "import sciline as sl\n",
-    "from ess.nmx.loader import providers as loader_providers\n",
-    "from ess.nmx.loader import FileTypeMcStas, Events\n",
-    "from ess.nmx.reduction import providers as reduction_providers\n",
-    "from ess.nmx.reduction import default_params\n",
+    "from ess.nmx.loader import FileTypeMcStas\n",
+    "from ess.nmx.reduction import TimeBinned\n",
     "\n",
-    "pl = sl.Pipeline([*loader_providers, *reduction_providers], params={**params, **default_params})\n",
+    "pl = sl.Pipeline(\n",
+    "    providers,\n",
+    "    params=params\n",
+    ")\n",
+    "\n",
     "file_type = FileTypeMcStas\n",
-    "graph = pl.get(Events[FileTypeMcStas]).visualize(graph_attr={'rankdir': 'LR'})\n",
-    "graph.render('example', 'png')\n",
-    "graph"
+    "mcstas_workflow_graph = pl.get(TimeBinned[FileTypeMcStas])\n",
+    "mcstas_workflow_diagram = mcstas_workflow_graph.visualize(graph_attr={'rankdir': 'LR'})\n",
+    "mcstas_workflow_diagram.render('mcstas_workflow_graph', 'png')\n",
+    "mcstas_workflow_diagram"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# from ess.nmx.loader import FileTypeMcStas, Events, TList, IDList\n",
-    "# results = pl.get((TList[file_type], IDList[file_type], Events[file_type])).compute()\n",
-    "# t_list = results[TList[file_type]].value\n",
-    "# id_list = results[IDList[file_type]].value\n",
-    "# da = results[Events[file_type]].value\n",
+    "## Compute\n",
     "\n",
-    "# print(\"t-list range: [\", t_list.min().value, \", \", t_list.max().value, \"]\")\n",
-    "# print(\"id-list range: [\", id_list.min().value, \", \", id_list.max().value, \"]\")"
+    "You can compute a certain type from the graph."
    ]
   },
   {
@@ -173,7 +154,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# da"
+    "time_binned = mcstas_workflow_graph.compute(TimeBinned[FileTypeMcStas])\n",
+    "time_binned"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also compute more than 1 type at the same time. <br>\n",
+    "Then ``compute`` returns a dictionary of requested types."
    ]
   },
   {
@@ -184,42 +174,10 @@
    "source": [
     "from ess.nmx.reduction import Grouped\n",
     "\n",
-    "graph = pl.get(Grouped[file_type]).visualize(graph_attr={'rankdir': 'LR'})\n",
-    "graph.render('example', format='png')\n",
-    "graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# grouped = pl.get(Grouped[file_type]).compute()\n",
-    "# grouped"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ess.nmx.reduction import TimeBinned\n",
+    "multiple_results = pl.get((Grouped[file_type], TimeBinned[file_type])).compute()\n",
+    "grouped = multiple_results[Grouped[file_type]]\n",
     "\n",
-    "graph = pl.get(TimeBinned[file_type]).visualize(graph_attr={'rankdir': 'LR'})\n",
-    "graph.render('time_binning_graph', format='png')\n",
-    "graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# time_binned = pl.get(TimeBinned[file_type]).compute()\n",
-    "# time_binned"
+    "grouped"
    ]
   }
  ],
