Remove frequently adjusted parameter from default parameter dictionary.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -49,7 +49,7 @@
     "from ess.nmx import build_workflow\n",
     "from ess.nmx.loader import FileTypeMcStas\n",
     "from ess.nmx.data import small_mcstas_sample\n",
-    "from ess.nmx.reduction import TimeBinned\n",
+    "from ess.nmx.reduction import TimeBinned, TimeBinStep\n",
     "\n",
     "file_path = small_mcstas_sample()  # Replace it with your data file path\n",
     "\n",
@@ -94,16 +94,18 @@
    "outputs": [],
    "source": [
     "import scipp as sc\n",
-    "from ess.nmx.workflow import collect_default_parameters, collect_providers\n",
+    "from ess.nmx.workflow import collect_default_parameters, providers\n",
     "from ess.nmx.loader import InputFileName\n",
     "\n",
-    "# Collect Providers\n",
-    "providers = collect_providers()\n",
-    "\n",
     "# Collect Parameters\n",
-    "params = collect_default_parameters()\n",
+    "# ``TimeBinStep`` and ``InputFileName`` are not included in the default parameters.\n",
+    "params = {\n",
+    "    **collect_default_parameters(),\n",
+    "    TimeBinStep: TimeBinStep(1),\n",
+    "    InputFileName: small_mcstas_sample()\n",
+    "}\n",
     "\n",
-    "# Add ``InputFileName`` parameter. It is not included in the default parameters.\n",
+    "\n",
     "params[InputFileName] = small_mcstas_sample()\n",
     "\n",
     "# Parameters to run the workflow:\n",
@@ -128,7 +130,7 @@
     "from ess.nmx.reduction import TimeBinned\n",
     "\n",
     "pl = sl.Pipeline(\n",
-    "    providers,\n",
+    "    list(providers),\n",
     "    params=params\n",
     ")\n",
     "\n",
@@ -172,10 +174,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ess.nmx.reduction import Grouped\n",
+    "from ess.nmx.reduction import GroupedByPixelID\n",
     "\n",
-    "multiple_results = pl.get((Grouped[file_type], TimeBinned[file_type])).compute()\n",
-    "grouped = multiple_results[Grouped[file_type]]\n",
+    "multiple_results = pl.get((GroupedByPixelID[file_type], TimeBinned[file_type])).compute()\n",
+    "grouped = multiple_results[GroupedByPixelID[file_type]]\n",
     "\n",
     "grouped"
    ]
