Expose workflow pipeline building.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -46,14 +46,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ess.nmx import build_workflow\n",
-    "from ess.nmx.loader import FileTypeMcStas\n",
+    "import sciline as sl\n",
+    "from ess.nmx.workflow import collect_default_parameters, providers\n",
+    "from ess.nmx.loader import FileTypeMcStas, InputFileName, MaximumPropability, DefaultMaximumPropability\n",
     "from ess.nmx.data import small_mcstas_sample\n",
     "from ess.nmx.reduction import TimeBinned, TimeBinStep\n",
     "\n",
     "file_path = small_mcstas_sample()  # Replace it with your data file path\n",
     "\n",
-    "nmx_workflow = build_workflow(file_path)\n",
+    "nmx_workflow = sl.Pipeline(list(providers), params={\n",
+    "                            **collect_default_parameters(),\n",
+    "                            MaximumPropability: DefaultMaximumPropability,\n",
+    "                            TimeBinStep: TimeBinStep(1),\n",
+    "                            InputFileName: InputFileName(file_path),\n",
+    "                        })\n",
+    "\n",
     "time_binned = nmx_workflow.compute(TimeBinned[FileTypeMcStas])\n",
     "time_binned"
    ]
@@ -104,9 +111,6 @@
     "    TimeBinStep: TimeBinStep(1),\n",
     "    InputFileName: small_mcstas_sample()\n",
     "}\n",
-    "\n",
-    "\n",
-    "params[InputFileName] = small_mcstas_sample()\n",
     "\n",
     "# Parameters to run the workflow:\n",
     "sc.DataGroup({param_t.__name__: val for param_t, val in params.items()})\n"
