Apply suggestions from code review
Co-authored-by: Neil Vaytet <39047984+nvaytet@users.noreply.github.com>

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Workflow\n",
     "\n",
-    "There is two workflows for NMX, one for simulation and one for measurement data. <br>\n",
+    "There are two workflows for NMX, one for simulation and one for measurement data. <br>\n",
     "This page will show simulation data workflow as an example. <br>\n",
     "They are written with ``sciline``, so we will show how to collect ``providers`` and ``parameters`` to build a workflow pipeline and compute the required result. <br>\n",
     "\n",
