--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "import sciline as sl\n",
     "from ess.nmx.workflow import collect_default_parameters, providers\n",
-    "from ess.nmx.loader import FileTypeMcStas, InputFileName, MaximumPropability, DefaultMaximumPropability\n",
+    "from ess.nmx.loader import FileTypeMcStas, InputFileName, MaximumProbability, DefaultMaximumProbability\n",
     "from ess.nmx.data import small_mcstas_sample\n",
     "from ess.nmx.reduction import TimeBinned, TimeBinStep\n",
     "\n",
@@ -56,7 +56,7 @@
     "\n",
     "nmx_workflow = sl.Pipeline(list(providers), params={\n",
     "                            **collect_default_parameters(),\n",
-    "                            MaximumPropability: DefaultMaximumPropability,\n",
+    "                            MaximumProbability: DefaultMaximumProbability,\n",
     "                            TimeBinStep: TimeBinStep(1),\n",
     "                            InputFileName: InputFileName(file_path),\n",
     "                        })\n",
