--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -8,9 +8,8 @@
     "\n",
     "There are two workflows for NMX, one for simulation and one for measurement data. <br>\n",
     "This page will show simulation data workflow as an example. <br>\n",
-    "They are written with ``sciline``, so we will show how to collect ``providers`` and ``parameters`` to build a workflow pipeline and compute the required result. <br>\n",
-    "\n",
-    "First, we will set up scipp logging widget in the notebook."
+    "They are written with ``sciline``, so we will show how to collect ``providers`` and ``parameters`` <br>\n",
+    "to build a workflow pipeline and compute the required result. <br>"
    ]
   },
   {
@@ -19,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Logging widget\n",
+    "# scipp logging widget to see intermediate results.\n",
     "from scipp.logging import get_log_widget, make_widget_handler, get_logger, WidgetHandler\n",
     "\n",
     "sc_logger = get_logger()\n",
@@ -37,7 +36,7 @@
    "source": [
     "## TL;DR\n",
     "\n",
-    "If you don't need to replace any providers or parameters, you can use the pre-defined pipeline."
+    "This cell shows how build a pipeline and use it to compute a ``TimeBinned`` histogram with file type of ``FileTypeMcStas``."
    ]
   },
   {
@@ -89,9 +88,8 @@
    "source": [
     "## Collect Providers and Parameters\n",
     "\n",
-    "There are helpers to collect providers and default parameters in ``ess.nmx.workflow`` module. <br>\n",
-    "If you need to replace any parameters, you can replace them in the dictionary and use it to build a pipeline. <br>\n",
-    "``build_workflow`` helper also accepts certain types as an argument to build a pipeline with, but not all types are supported by this helper. "
+    "There is a helper to collect default parameters and collection of all providers in ``ess.nmx.workflow`` module. <br>\n",
+    "If you need to replace any parameters, you can replace them in the dictionary and use it to build a pipeline. <br>"
    ]
   },
   {
