--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "## TL;DR\n",
     "\n",
-    "This cell shows how build a pipeline and use it to compute a ``TimeBinned`` histogram with file type of ``FileTypeMcStas``."
+    "This cell shows how build a pipeline and use it to compute a ``TimeBinned`` histogram."
    ]
   },
   {
@@ -47,20 +47,27 @@
    "source": [
     "import sciline as sl\n",
     "from ess.nmx.workflow import collect_default_parameters, providers\n",
-    "from ess.nmx.loader import InputFileName, MaximumProbability, DefaultMaximumProbability\n",
+    "from ess.nmx.loader import InputFileName, MaximumProbability, DefaultMaximumProbability, DefaultMcStasEventDataSchema, McStasEventDataSchema\n",
     "from ess.nmx.data import small_mcstas_sample\n",
     "from ess.nmx.reduction import TimeBinned, TimeBinStep, get_intervals_mcstas\n",
     "from ess.nmx.logging import get_logger as get_nmx_logger\n",
     "\n",
     "file_path = small_mcstas_sample()  # Replace it with your data file path\n",
+    "mcstas_proivders = [\n",
+    "    *providers,\n",
+    "    get_nmx_logger,  # For logging.\n",
+    "    get_intervals_mcstas  # Additional provider for McStas data handling.\n",
+    "]\n",
+    "mcstas_params = {\n",
+    "                    **collect_default_parameters(),\n",
+    "                    TimeBinStep: TimeBinStep(1),\n",
+    "                    InputFileName: InputFileName(file_path),\n",
+    "                    # Additional parameters for McStas data handling.\n",
+    "                    McStasEventDataSchema: DefaultMcStasEventDataSchema,\n",
+    "                    MaximumProbability: DefaultMaximumProbability,\n",
+    "                }\n",
     "\n",
-    "nmx_workflow = sl.Pipeline(list(providers)+[get_nmx_logger, get_intervals_mcstas],\n",
-    "                           params={\n",
-    "                            **collect_default_parameters(),\n",
-    "                            MaximumProbability: DefaultMaximumProbability,\n",
-    "                            TimeBinStep: TimeBinStep(1),\n",
-    "                            InputFileName: InputFileName(file_path),\n",
-    "                        })\n",
+    "nmx_workflow = sl.Pipeline(mcstas_proivders, params=mcstas_params)\n",
     "\n",
     "time_binned = nmx_workflow.compute(TimeBinned)\n",
     "time_binned"
