sc.group cannot handle multi-dim

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -47,25 +47,30 @@
    "source": [
     "import sciline as sl\n",
     "from ess.nmx.workflow import collect_default_parameters, providers\n",
-    "from ess.nmx.loader import InputFileName, MaximumProbability, DefaultMaximumProbability, DefaultMcStasEventDataSchema, McStasEventDataSchema\n",
+    "from ess.nmx.loader import (\n",
+    "    InputFileName,\n",
+    "    MaximumProbability,\n",
+    "    DefaultMaximumProbability,\n",
+    "    DefaultMcStasEventDataSchema,\n",
+    "    McStasEventDataSchema,\n",
+    ")\n",
     "from ess.nmx.data import small_mcstas_sample\n",
-    "from ess.nmx.reduction import TimeBinned, TimeBinStep, get_intervals_mcstas\n",
+    "from ess.nmx.reduction import TimeBinned, TimeBinStep\n",
     "from ess.nmx.logging import get_logger as get_nmx_logger\n",
     "\n",
     "file_path = small_mcstas_sample()  # Replace it with your data file path\n",
     "mcstas_proivders = [\n",
     "    *providers,\n",
     "    get_nmx_logger,  # For logging.\n",
-    "    get_intervals_mcstas  # Additional provider for McStas data handling.\n",
     "]\n",
     "mcstas_params = {\n",
-    "                    **collect_default_parameters(),\n",
-    "                    TimeBinStep: TimeBinStep(1),\n",
-    "                    InputFileName: InputFileName(file_path),\n",
-    "                    # Additional parameters for McStas data handling.\n",
-    "                    McStasEventDataSchema: DefaultMcStasEventDataSchema,\n",
-    "                    MaximumProbability: DefaultMaximumProbability,\n",
-    "                }\n",
+    "    **collect_default_parameters(),\n",
+    "    TimeBinStep: TimeBinStep(1),\n",
+    "    InputFileName: InputFileName(file_path),\n",
+    "    # Additional parameters for McStas data handling.\n",
+    "    McStasEventDataSchema: DefaultMcStasEventDataSchema,\n",
+    "    MaximumProbability: DefaultMaximumProbability,\n",
+    "}\n",
     "\n",
     "nmx_workflow = sl.Pipeline(mcstas_proivders, params=mcstas_params)\n",
     "\n",
@@ -111,7 +116,12 @@
     "import scipp as sc\n",
     "from ess.nmx.workflow import collect_default_parameters, providers\n",
     "from ess.nmx.loader import InputFileName\n",
-    "from ess.nmx.loader import McStasEventDataSchema, DefaultMcStasEventDataSchema, MaximumProbability, DefaultMaximumProbability\n",
+    "from ess.nmx.loader import (\n",
+    "    McStasEventDataSchema,\n",
+    "    DefaultMcStasEventDataSchema,\n",
+    "    MaximumProbability,\n",
+    "    DefaultMaximumProbability,\n",
+    ")\n",
     "\n",
     "# Collect Parameters\n",
     "# ``TimeBinStep`` and ``InputFileName`` are not included in the default parameters.\n",
@@ -120,11 +130,11 @@
     "    TimeBinStep: TimeBinStep(1),\n",
     "    InputFileName: small_mcstas_sample(),\n",
     "    MaximumProbability: DefaultMaximumProbability,\n",
-    "    McStasEventDataSchema: DefaultMcStasEventDataSchema  \n",
+    "    McStasEventDataSchema: DefaultMcStasEventDataSchema,\n",
     "}\n",
     "\n",
     "# Parameters to run the workflow:\n",
-    "sc.DataGroup({param_t.__name__: val for param_t, val in params.items()})\n"
+    "sc.DataGroup({param_t.__name__: val for param_t, val in params.items()})"
    ]
   },
   {
@@ -146,10 +156,7 @@
     "import sciline as sl\n",
     "from ess.nmx.reduction import TimeBinned\n",
     "\n",
-    "pl = sl.Pipeline(\n",
-    "    list(providers)+[get_intervals_mcstas],\n",
-    "    params=params\n",
-    ")\n",
+    "pl = sl.Pipeline(list(providers) + [get_intervals_mcstas], params=params)\n",
     "\n",
     "mcstas_workflow_graph = pl.get(TimeBinned)\n",
     "mcstas_workflow_diagram = mcstas_workflow_graph.visualize()\n",
@@ -215,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
