--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "## Collect Parameters and Providers\n",
     "### Simulation(McStas) Data\n",
-    "There is an extra parameter that can be configured for **McStas** simulation data workflow. <br>\n",
-    "It is because ``weights`` are given as probability, not integer number of events in a McStas file. <br>\n",
-    "Therefore users can set a scale factor called ``MaximumProabability`` to derive more realistic number of events. <br>"
+    "There is a dedicated loader, ``load_mcstas_nmx_file`` for ``McStas`` simulation data workflow. <br>\n",
+    "``MaximumProabability`` can be manually provided to the loader derive more realistic number of events. <br>\n",
+    "It is because ``weights`` are given as probability, not integer number of events in a McStas file. <br>"
    ]
   },
   {
@@ -21,19 +21,21 @@
    "source": [
     "# Collect parameters and providers\n",
     "import scipp as sc\n",
-    "from ess.nmx.workflow import collect_default_parameters, providers\n",
-    "from ess.nmx.loader import (\n",
-    "    InputFileName,\n",
+    "from ess.nmx.workflow import collect_default_parameters\n",
+    "from ess.nmx.mcstas_loader import load_mcstas_nmx_file\n",
+    "from ess.nmx.mcstas_loader import (\n",
+    "    InputFilename,\n",
     "    MaximumProbability,\n",
     "    DefaultMaximumProbability\n",
     ")\n",
     "from ess.nmx.data import small_mcstas_sample\n",
     "\n",
-    "file_path = small_mcstas_sample()  # Replace it with your data file path\n",
+    "providers = (load_mcstas_nmx_file, )\n",
     "\n",
+    "file_path = small_mcstas_sample()  # Replace it with your data file path\n",
     "params = {\n",
     "    **collect_default_parameters(),\n",
-    "    InputFileName: InputFileName(file_path),\n",
+    "    InputFilename: InputFilename(file_path),\n",
     "    # Additional parameters for McStas data handling.\n",
     "    MaximumProbability: DefaultMaximumProbability,\n",
     "}"
@@ -67,10 +69,10 @@
    "outputs": [],
    "source": [
     "import sciline as sl\n",
-    "from ess.nmx.reduction import GroupedByPixelID\n",
+    "from ess.nmx.mcstas_loader import NMXData\n",
     "\n",
     "nmx_pl = sl.Pipeline(list(providers), params=params)\n",
-    "nmx_workflow = nmx_pl.get(GroupedByPixelID)\n",
+    "nmx_workflow = nmx_pl.get(NMXData)\n",
     "nmx_workflow.visualize()"
    ]
   },
@@ -88,7 +90,7 @@
    "outputs": [],
    "source": [
     "# Event data grouped by detector panel and pixel id.\n",
-    "da = nmx_workflow.compute(GroupedByPixelID)\n",
+    "da = nmx_workflow.compute(NMXData)\n",
     "da"
    ]
   }
@@ -109,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
