Update variable/function names and add docs.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "## Collect Parameters and Providers\n",
     "### Simulation(McStas) Data\n",
-    "There is a dedicated loader, ``load_mcstas_nmx_file`` for ``McStas`` simulation data workflow. <br>\n",
-    "``MaximumProabability`` can be manually provided to the loader derive more realistic number of events. <br>\n",
-    "It is because ``weights`` are given as probability, not integer number of events in a McStas file. <br>"
+    "There is a dedicated loader, ``load_mcstas_nexus`` for ``McStas`` simulation data workflow. <br>\n",
+    "``MaximumProbability`` can be manually provided to the loader to derive more realistic number of events. <br>\n",
+    "It is because ``weights`` are given as probability, not number of events in a McStas file. <br>"
    ]
   },
   {
@@ -22,20 +22,20 @@
     "# Collect parameters and providers\n",
     "import scipp as sc\n",
     "from ess.nmx.workflow import collect_default_parameters\n",
-    "from ess.nmx.mcstas_loader import load_mcstas_nmx_file\n",
+    "from ess.nmx.mcstas_loader import load_mcstas_nexus\n",
     "from ess.nmx.mcstas_loader import (\n",
-    "    InputFilename,\n",
+    "    InputFilepath,\n",
     "    MaximumProbability,\n",
     "    DefaultMaximumProbability\n",
     ")\n",
     "from ess.nmx.data import small_mcstas_sample\n",
     "\n",
-    "providers = (load_mcstas_nmx_file, )\n",
+    "providers = (load_mcstas_nexus, )\n",
     "\n",
     "file_path = small_mcstas_sample()  # Replace it with your data file path\n",
     "params = {\n",
     "    **collect_default_parameters(),\n",
-    "    InputFilename: InputFilename(file_path),\n",
+    "    InputFilepath: InputFilepath(file_path),\n",
     "    # Additional parameters for McStas data handling.\n",
     "    MaximumProbability: DefaultMaximumProbability,\n",
     "}"
