--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -21,15 +21,16 @@
    "source": [
     "# Collect parameters and providers\n",
     "import scipp as sc\n",
-    "from ess.nmx.mcstas_loader import load_mcstas_nexus\n",
+    "from ess.nmx.mcstas_loader import load_mcstas_nexus, load_mcstas_geometry\n",
     "from ess.nmx.mcstas_loader import (\n",
     "    InputFilepath,\n",
     "    MaximumProbability,\n",
-    "    DefaultMaximumProbability\n",
+    "    DefaultMaximumProbability,\n",
+    "    McStasGeometry\n",
     ")\n",
     "from ess.nmx.data import small_mcstas_sample\n",
     "\n",
-    "providers = (load_mcstas_nexus, )\n",
+    "providers = (load_mcstas_nexus, load_mcstas_geometry)\n",
     "\n",
     "file_path = small_mcstas_sample()  # Replace it with your data file path\n",
     "params = {\n",
@@ -70,7 +71,7 @@
     "from ess.nmx.mcstas_loader import NMXData\n",
     "\n",
     "nmx_pl = sl.Pipeline(list(providers), params=params)\n",
-    "nmx_workflow = nmx_pl.get(NMXData)\n",
+    "nmx_workflow = nmx_pl.get((NMXData, McStasGeometry))\n",
     "nmx_workflow.visualize()"
    ]
   },
@@ -90,6 +91,16 @@
     "# Event data grouped by detector panel and pixel id.\n",
     "da = nmx_workflow.compute(NMXData)\n",
     "da"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geometry = nmx_workflow.compute(McStasGeometry)\n",
+    "geometry"
    ]
   }
  ],
