Geometry parsing draft.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -26,7 +26,7 @@
     "    InputFilepath,\n",
     "    MaximumProbability,\n",
     "    DefaultMaximumProbability,\n",
-    "    McStasGeometry\n",
+    "    DetectorGeometry\n",
     ")\n",
     "from ess.nmx.data import small_mcstas_sample\n",
     "\n",
@@ -71,7 +71,7 @@
     "from ess.nmx.mcstas_loader import NMXData\n",
     "\n",
     "nmx_pl = sl.Pipeline(list(providers), params=params)\n",
-    "nmx_workflow = nmx_pl.get((NMXData, McStasGeometry))\n",
+    "nmx_workflow = nmx_pl.get((NMXData, DetectorGeometry))\n",
     "nmx_workflow.visualize()"
    ]
   },
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "geometry = nmx_workflow.compute(McStasGeometry)\n",
+    "geometry = nmx_workflow.compute(DetectorGeometry)\n",
     "geometry"
    ]
   }
