--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -91,11 +91,40 @@
     "da = nmx_workflow.compute(NMXData)\n",
     "da"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Instrument View\n",
+    "\n",
+    "Pixel positions are not used for later steps, but it is included in the coordinates for instrument view.\n",
+    "\n",
+    "All pixel positions are respect to the sample position, therefore the sample is at (0, 0, 0).\n",
+    "\n",
+    "**It might be very slow or not work in the ``VS Code`` jupyter notebook editor.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scippneutron as scn\n",
+    "\n",
+    "\n",
+    "unnecessary_coords = list(coord for coord in da.coords if coord != 'position')\n",
+    "instrument_view_da = da.drop_coords(unnecessary_coords).flatten(['panel', 'id'], 'id').hist()\n",
+    "view = scn.instrument_view(instrument_view_da)\n",
+    "view.children[0].toolbar.cameraz()\n",
+    "view"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nmx-dev-39",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -113,5 +142,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
