Use string-based type-hinting instead of self.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -9,7 +9,8 @@
     "## Collect Parameters and Providers\n",
     "### Simulation(McStas) Data\n",
     "There is a dedicated loader, ``load_mcstas_nexus`` for ``McStas`` simulation data workflow. <br>\n",
-    "``MaximumProbability`` can be manually provided to the loader to derive more realistic number of events. <br>\n",
+    "``MaximumProbability`` can be manually provided to the loader <br>\n",
+    "to derive more realistic number of events. <br>\n",
     "It is because ``weights`` are given as probability, not number of events in a McStas file. <br>"
    ]
   },
