--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -48,7 +48,9 @@
    "source": [
     "from typing import get_type_hints\n",
     "param_reprs = {key.__name__: value for key, value in params.items()}\n",
-    "prov_reprs = {get_type_hints(prov)['return'].__name__: prov.__name__ for prov in providers}\n",
+    "prov_reprs = {\n",
+    "    get_type_hints(prov)['return'].__name__: prov.__name__ for prov in providers\n",
+    "}\n",
     "\n",
     "# Providers and parameters to be used for pipeline\n",
     "sc.DataGroup(**prov_reprs, **param_reprs)"
@@ -99,9 +101,11 @@
    "source": [
     "## Instrument View\n",
     "\n",
-    "Pixel positions are not used for later steps, but it is included in the coordinates for instrument view.\n",
+    "Pixel positions are not used for later steps,\n",
+    "but it is included in the coordinates for instrument view.\n",
     "\n",
-    "All pixel positions are respect to the sample position, therefore the sample is at (0, 0, 0).\n",
+    "All pixel positions are respect to the sample position,\n",
+    "therefore the sample is at (0, 0, 0).\n",
     "\n",
     "**It might be very slow or not work in the ``VS Code`` jupyter notebook editor.**"
    ]
@@ -113,7 +117,6 @@
    "outputs": [],
    "source": [
     "import scippneutron as scn\n",
-    "\n",
     "\n",
     "unnecessary_coords = list(coord for coord in da.coords if coord != 'position')\n",
     "instrument_view_da = da.drop_coords(unnecessary_coords).flatten(['panel', 'id'], 'id').hist()\n",
