Remove instrument view from the cell temporarily.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -107,22 +107,19 @@
     "All pixel positions are respect to the sample position,\n",
     "therefore the sample is at (0, 0, 0).\n",
     "\n",
-    "**It might be very slow or not work in the ``VS Code`` jupyter notebook editor.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "You can plot the instrument view like below.\n",
+    "\n",
+    "```python\n",
     "import scippneutron as scn\n",
     "\n",
     "unnecessary_coords = list(coord for coord in da.coords if coord != 'position')\n",
     "instrument_view_da = da.drop_coords(unnecessary_coords).flatten(['panel', 'id'], 'id').hist()\n",
     "view = scn.instrument_view(instrument_view_da)\n",
     "view.children[0].toolbar.cameraz()\n",
-    "view"
+    "view\n",
+    "```\n",
+    "\n",
+    "**It might be very slow or not work in the ``VS Code`` jupyter notebook editor.**"
    ]
   }
  ],
