--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -104,7 +104,7 @@
     "Pixel positions are not used for later steps,\n",
     "but it is included in the coordinates for instrument view.\n",
     "\n",
-    "All pixel positions are respect to the sample position,\n",
+    "All pixel positions are relative to the sample position,\n",
     "therefore the sample is at (0, 0, 0).\n",
     "\n",
     "You can plot the instrument view like below.\n",
