Time binning reduction and export method.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -29,11 +29,13 @@
     "    DefaultMaximumProbability\n",
     ")\n",
     "from ess.nmx.data import small_mcstas_sample\n",
+    "from ess.nmx.reduction import bin_time_of_arrival, NMXReducedData, TimeBinSteps\n",
     "\n",
-    "providers = (load_mcstas_nexus, )\n",
+    "providers = (load_mcstas_nexus, bin_time_of_arrival, )\n",
     "\n",
     "file_path = small_mcstas_sample()  # Replace it with your data file path\n",
     "params = {\n",
+    "    TimeBinSteps: TimeBinSteps(50),\n",
     "    InputFilepath: InputFilepath(file_path),\n",
     "    # Additional parameters for McStas data handling.\n",
     "    MaximumProbability: DefaultMaximumProbability,\n",
@@ -71,9 +73,10 @@
    "source": [
     "import sciline as sl\n",
     "from ess.nmx.mcstas_loader import NMXData\n",
+    "from ess.nmx.reduction import NMXReducedData\n",
     "\n",
     "nmx_pl = sl.Pipeline(list(providers), params=params)\n",
-    "nmx_workflow = nmx_pl.get(NMXData)\n",
+    "nmx_workflow = nmx_pl.get(NMXReducedData)\n",
     "nmx_workflow.visualize()"
    ]
   },
@@ -91,8 +94,35 @@
    "outputs": [],
    "source": [
     "# Event data grouped by detector panel and pixel id.\n",
-    "da = nmx_workflow.compute(NMXData)\n",
-    "da"
+    "dg = nmx_workflow.compute(NMXData)\n",
+    "dg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Binned data.\n",
+    "\n",
+    "binned_dg = nmx_workflow.compute(NMXReducedData)\n",
+    "binned_dg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export Results\n",
+    "\n",
+    "``NMXReducedData`` object has a method to export the data into nexus or h5 file.\n",
+    "\n",
+    "You can save the result as ``test.nxs`` for example.\n",
+    "\n",
+    "```python\n",
+    "binned_dg.export_as_nexus('test.nxs')\n",
+    "```"
    ]
   },
   {
@@ -112,9 +142,9 @@
     "```python\n",
     "import scippneutron as scn\n",
     "\n",
-    "unnecessary_coords = list(coord for coord in da.coords if coord != 'position')\n",
-    "instrument_view_da = da.drop_coords(unnecessary_coords).flatten(['panel', 'id'], 'id').hist()\n",
-    "view = scn.instrument_view(instrument_view_da)\n",
+    "da = dg['weights']\n",
+    "da.coords['position'] = dg['position']\n",
+    "view = scn.instrument_view(da.flatten(['panel', 'id'], 'id').hist())\n",
     "view.children[0].toolbar.cameraz()\n",
     "view\n",
     "```\n",
