--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -29,7 +29,7 @@
     "    DefaultMaximumProbability\n",
     ")\n",
     "from ess.nmx.data import small_mcstas_sample\n",
-    "from ess.nmx.reduction import bin_time_of_arrival, NMXReducedData, TimeBinSteps\n",
+    "from ess.nmx.reduction import bin_time_of_arrival, TimeBinSteps\n",
     "\n",
     "providers = (load_mcstas_nexus, bin_time_of_arrival, )\n",
     "\n",
@@ -137,7 +137,7 @@
     "All pixel positions are relative to the sample position,\n",
     "therefore the sample is at (0, 0, 0).\n",
     "\n",
-    "The instrument view is shown using"
+    "**It might be very slow or not work in the ``VS Code`` jupyter notebook editor.**"
    ]
   },
   {
@@ -151,12 +151,9 @@
     "da = dg['weights']\n",
     "da.coords['position'] = dg['position']\n",
     "# Plot one out of 100 pixels to reduce size of docs output\n",
-    "view = scn.instrument_view(da.flatten(['panel', 'id'], 'id')['id', ::100].hist(), pixel_size=0.0075)\n",
+    "view = scn.instrument_view(da['id', ::100].hist(), pixel_size=0.0075)\n",
     "view.children[0].toolbar.cameraz()\n",
-    "view\n",
-    "```\n",
-    "\n",
-    "**It might be very slow or not work in the ``VS Code`` jupyter notebook editor.**"
+    "view"
    ]
   }
  ],
@@ -175,7 +172,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
