Add McStas specific field manipulation functions as parameters.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -26,7 +26,11 @@
     "from ess.nmx.mcstas_loader import (\n",
     "    InputFilepath,\n",
     "    MaximumProbability,\n",
-    "    DefaultMaximumProbability\n",
+    "    DefaultMaximumProbability,\n",
+    "    McStasEventWeightsConverter,\n",
+    "    event_weights_from_probability,\n",
+    "    McStasProtonChargeConverter,\n",
+    "    proton_charge_from_event_data,\n",
     ")\n",
     "from ess.nmx.data import small_mcstas_sample\n",
     "from ess.nmx.reduction import bin_time_of_arrival, TimeBinSteps\n",
@@ -39,7 +43,23 @@
     "    InputFilepath: InputFilepath(file_path),\n",
     "    # Additional parameters for McStas data handling.\n",
     "    MaximumProbability: DefaultMaximumProbability,\n",
+    "    McStasEventWeightsConverter: event_weights_from_probability,\n",
+    "    McStasProtonChargeConverter: proton_charge_from_event_data,\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``event weights converter`` and ``proton_charge_from_event_data`` are\n",
+    "\n",
+    "set as parameters for reproducibility of workflow and accessibility to the documentation.\n",
+    "\n",
+    "The reason of having them as parameters not as providers is,\n",
+    "\n",
+    "1. They are not part of general reduction, which are only for McStas cases.\n",
+    "2. They are better done while the file is open and read in the loader.\n"
    ]
   },
   {
