Specify mcstas version in the loader name.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# Collect parameters and providers\n",
     "import scipp as sc\n",
-    "from ess.nmx.mcstas_loader import load_mcstas_nexus\n",
+    "from ess.nmx.mcstas_loader import load_mcstas2_nexus\n",
     "from ess.nmx.mcstas_loader import (\n",
     "    InputFilepath,\n",
     "    MaximumProbability,\n",
@@ -35,7 +35,7 @@
     "from ess.nmx.data import small_mcstas_sample\n",
     "from ess.nmx.reduction import bin_time_of_arrival, TimeBinSteps\n",
     "\n",
-    "providers = (load_mcstas_nexus, bin_time_of_arrival, )\n",
+    "providers = (load_mcstas2_nexus, bin_time_of_arrival, )\n",
     "\n",
     "file_path = small_mcstas_sample()  # Replace it with your data file path\n",
     "params = {\n",
