Rename type alias.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -27,9 +27,9 @@
     "    InputFilepath,\n",
     "    MaximumProbability,\n",
     "    DefaultMaximumProbability,\n",
-    "    McStasEventWeightsConverter,\n",
+    "    EventWeightsConverter,\n",
     "    event_weights_from_probability,\n",
-    "    McStasProtonChargeConverter,\n",
+    "    ProtonChargeConverter,\n",
     "    proton_charge_from_event_data,\n",
     ")\n",
     "from ess.nmx.data import small_mcstas_sample\n",
@@ -43,8 +43,8 @@
     "    InputFilepath: InputFilepath(file_path),\n",
     "    # Additional parameters for McStas data handling.\n",
     "    MaximumProbability: DefaultMaximumProbability,\n",
-    "    McStasEventWeightsConverter: event_weights_from_probability,\n",
-    "    McStasProtonChargeConverter: proton_charge_from_event_data,\n",
+    "    EventWeightsConverter: event_weights_from_probability,\n",
+    "    ProtonChargeConverter: proton_charge_from_event_data,\n",
     "}"
    ]
   },
