--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Workflow\n",
     "\n",
-    "## Collect Parameters and Providers\n",
+    "## Build Pipeline: Collect Parameters and Providers\n",
     "### Simulation(McStas) Data\n",
     "There is a dedicated loader, ``load_mcstas_nexus`` for ``McStas`` simulation data workflow. <br>\n",
     "``MaximumProbability`` can be manually provided to the loader <br>\n",
@@ -21,7 +21,6 @@
    "outputs": [],
    "source": [
     "# Collect parameters and providers\n",
-    "import scipp as sc\n",
     "from ess.nmx.mcstas_loader import load_mcstas_nexus\n",
     "from ess.nmx.mcstas_loader import (\n",
     "    InputFilepath,\n",
@@ -38,6 +37,7 @@
     "providers = (load_mcstas_nexus, bin_time_of_arrival, )\n",
     "\n",
     "file_path = small_mcstas_sample()  # Replace it with your data file path\n",
+    "\n",
     "params = {\n",
     "    TimeBinSteps: TimeBinSteps(50),\n",
     "    InputFilepath: InputFilepath(file_path),\n",
@@ -68,14 +68,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import get_type_hints\n",
-    "param_reprs = {key.__name__: value for key, value in params.items()}\n",
-    "prov_reprs = {\n",
-    "    get_type_hints(prov)['return'].__name__: prov.__name__ for prov in providers\n",
-    "}\n",
+    "import sciline as sl\n",
+    "from ess.nmx.mcstas_loader import NMXData\n",
+    "from ess.nmx.reduction import NMXReducedData\n",
     "\n",
-    "# Providers and parameters to be used for pipeline\n",
-    "sc.DataGroup(**prov_reprs, **param_reprs)"
+    "nmx_pl = sl.Pipeline(list(providers), params=params)\n",
+    "nmx_pl"
    ]
   },
   {
@@ -91,11 +89,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sciline as sl\n",
-    "from ess.nmx.mcstas_loader import NMXData\n",
-    "from ess.nmx.reduction import NMXReducedData\n",
-    "\n",
-    "nmx_pl = sl.Pipeline(list(providers), params=params)\n",
     "nmx_workflow = nmx_pl.get(NMXReducedData)\n",
     "nmx_workflow.visualize()"
    ]
