Add mcstas 3 file tests and add deprecation warnings for mcstas 2 file.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -32,12 +32,13 @@
     "    ProtonChargeConverter,\n",
     "    proton_charge_from_event_data,\n",
     ")\n",
-    "from ess.nmx.data import small_mcstas_sample\n",
+    "from ess.nmx.data import small_mcstas_3_sample\n",
+    "from ess.nmx.data import small_mcstas_2_sample\n",
     "from ess.nmx.reduction import bin_time_of_arrival, TimeBinSteps\n",
     "\n",
     "providers = (load_mcstas_nexus, bin_time_of_arrival, )\n",
     "\n",
-    "file_path = small_mcstas_sample()  # Replace it with your data file path\n",
+    "file_path = small_mcstas_2_sample()  # Replace it with your data file path\n",
     "params = {\n",
     "    TimeBinSteps: TimeBinSteps(50),\n",
     "    InputFilepath: InputFilepath(file_path),\n",
