Update to use sciline pipeline wrapper.

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# Workflow\n",
+    "In this example, we will use McStas 3 simulation file.\n",
     "\n",
-    "## Collect Parameters and Providers\n",
-    "### Simulation(McStas) Data\n",
+    "## Build Pipeline (Collect Parameters and Providers)\n",
     "There is a dedicated loader, ``load_mcstas_nexus`` for ``McStas`` simulation data workflow. <br>\n",
     "``MaximumProbability`` can be manually provided to the loader <br>\n",
     "to derive more realistic number of events. <br>\n",
@@ -33,12 +33,11 @@
     "    proton_charge_from_event_data,\n",
     ")\n",
     "from ess.nmx.data import small_mcstas_3_sample\n",
-    "from ess.nmx.data import small_mcstas_2_sample\n",
     "from ess.nmx.reduction import bin_time_of_arrival, TimeBinSteps\n",
     "\n",
     "providers = (load_mcstas_nexus, bin_time_of_arrival, )\n",
     "\n",
-    "file_path = small_mcstas_2_sample()  # Replace it with your data file path\n",
+    "file_path = small_mcstas_3_sample()  # Replace it with your data file path\n",
     "params = {\n",
     "    TimeBinSteps: TimeBinSteps(50),\n",
     "    InputFilepath: InputFilepath(file_path),\n",
@@ -60,7 +59,7 @@
     "The reason of having them as parameters not as providers is,\n",
     "\n",
     "1. They are not part of general reduction, which are only for McStas cases.\n",
-    "2. They are better done while the file is open and read in the loader.\n"
+    "2. They are better done while the file is open and read in the loader."
    ]
   },
   {
@@ -69,14 +68,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import get_type_hints\n",
-    "param_reprs = {key.__name__: value for key, value in params.items()}\n",
-    "prov_reprs = {\n",
-    "    get_type_hints(prov)['return'].__name__: prov.__name__ for prov in providers\n",
-    "}\n",
+    "import sciline as sl\n",
     "\n",
-    "# Providers and parameters to be used for pipeline\n",
-    "sc.DataGroup(**prov_reprs, **param_reprs)"
+    "nmx_pl = sl.Pipeline(list(providers), params=params)\n",
+    "nmx_pl"
    ]
   },
   {
@@ -194,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
