fix: add bank to example

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -31,6 +31,7 @@
     "    event_weights_from_probability,\n",
     "    ProtonChargeConverter,\n",
     "    proton_charge_from_event_data,\n",
+    "    DetectorBankName,\n",
     ")\n",
     "from ess.nmx.data import small_mcstas_3_sample\n",
     "from ess.nmx.reduction import bin_time_of_arrival, TimeBinSteps\n",
@@ -45,6 +46,7 @@
     "    MaximumProbability: DefaultMaximumProbability,\n",
     "    EventWeightsConverter: event_weights_from_probability,\n",
     "    ProtonChargeConverter: proton_charge_from_event_data,\n",
+    "    DetectorBankName: 'bank01',\n",
     "}"
    ]
   },
