fix: move TimeBinSteps to types and update docs

--- a/docs/examples/workflow.ipynb
+++ b/docs/examples/workflow.ipynb
@@ -25,8 +25,7 @@
     "from ess.nmx.mcstas_xml import read_mcstas_geometry_xml\n",
     "from ess.nmx.data import small_mcstas_3_sample, small_mcstas_2_sample\n",
     "from ess.nmx.types import *\n",
-    "from ess.nmx.reduction import NMXData, NMXReducedData, bin_time_of_arrival, TimeBinSteps\n",
-    "\n",
+    "from ess.nmx.reduction import NMXData, NMXReducedData, bin_time_of_arrival\n",
     "\n",
     "pl = sl.Pipeline((*loader_providers, read_mcstas_geometry_xml, bin_time_of_arrival))\n",
     "# Replace with the path to your own file\n",
@@ -35,7 +34,7 @@
     "pl[TimeBinSteps] = 50\n",
     "# DetectorIndex selects what detector panels to include in the run\n",
     "# in this case we select all three panels.\n",
-    "pl.set_param_table(sl.ParamTable(RunID, {DetectorIndex: range(3)}, index=range(3)))"
+    "pl.set_param_series(DetectorIndex, range(3))"
    ]
   },
   {
@@ -85,7 +84,7 @@
    "outputs": [],
    "source": [
     "# Event data grouped by pixel id for each of the selected detectors\n",
-    "dg = nmx_workflow.compute(sl.Series[RunID, NMXData])\n",
+    "dg = nmx_workflow.compute(sl.Series[DetectorIndex, NMXData])\n",
     "dg"
    ]
   },
@@ -108,11 +107,7 @@
     "\n",
     "``NMXReducedData`` object has a method to export the data into nexus or h5 file.\n",
     "\n",
-    "You can save the result as ``test.nxs`` for example.\n",
-    "\n",
-    "```python\n",
-    "binned_dg.export_as_nexus('test.nxs')\n",
-    "```"
+    "You can save the result as ``test.nxs``, for example:\n"
    ]
   },
   {
@@ -121,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binned_dg.export_as_nexus('test.nxs')"
+    "#binned_dg.export_as_nexus('test.nxs')"
    ]
   },
   {
