--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -20,11 +20,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ess.nmx.mtz_io import read_mtz_file, mtz_to_pandas, MTZFilepath\n",
+    "from ess.nmx.mtz_io import read_mtz_file, mtz_to_pandas, MTZFilePath\n",
     "from ess.nmx.data import get_small_mtz_samples\n",
     "\n",
+    "\n",
     "small_mtz_sample = get_small_mtz_samples()[0]\n",
-    "mtz = read_mtz_file(MTZFilepath(small_mtz_sample))\n",
+    "mtz = read_mtz_file(MTZFilePath(small_mtz_sample))\n",
     "df = mtz_to_pandas(mtz)\n",
     "df.head()"
    ]
@@ -53,7 +54,7 @@
    "source": [
     "import sciline as sl\n",
     "from ess.nmx.mtz_io import mtz_io_providers\n",
-    "from ess.nmx.mtz_io import MTZFilepath, MTZFileIndex, NMXMtzDataFrame, SpaceGroupDesc\n",
+    "from ess.nmx.mtz_io import MTZFileIndex, NMXMtzDataFrame, SpaceGroupDesc\n",
     "\n",
     "pl = sl.Pipeline(\n",
     "    providers=mtz_io_providers,\n",
@@ -64,7 +65,7 @@
     ")\n",
     "\n",
     "file_path_table = sl.ParamTable(\n",
-    "    row_dim=MTZFileIndex, columns={MTZFilepath: get_small_mtz_samples()}\n",
+    "    row_dim=MTZFileIndex, columns={MTZFilePath: get_small_mtz_samples()}\n",
     ")\n",
     "\n",
     "pl.set_param_table(file_path_table)\n",
