Reference scale factor methods.

--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -53,14 +53,17 @@
    "outputs": [],
    "source": [
     "import sciline as sl\n",
-    "from ess.nmx.mtz_io import mtz_io_providers\n",
-    "from ess.nmx.mtz_io import MTZFileIndex, NMXMtzDataFrame, SpaceGroupDesc\n",
+    "from ess.nmx.mtz_io import mtz_io_providers, mtz_io_params\n",
+    "from ess.nmx.mtz_io import MTZFileIndex, SpaceGroupDesc\n",
+    "from ess.nmx.scaling import scaling_providers\n",
+    "from ess.nmx.scaling import WavelengthBinSize, WavelengthBinned\n",
     "\n",
     "pl = sl.Pipeline(\n",
-    "    providers=mtz_io_providers,\n",
+    "    providers=mtz_io_providers+scaling_providers,\n",
     "    params={\n",
-    "        SpaceGroupDesc: \"C 1 2 1\"\n",
-    "        # Replace with the correct space group if needed\n",
+    "        SpaceGroupDesc: \"C 1 2 1\",  # Replace with the correct space group if needed\n",
+    "        WavelengthBinSize: 50,  # Replace with the correct bin size if needed\n",
+    "        **mtz_io_params\n",
     "    },\n",
     ")\n",
     "\n",
@@ -85,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaling_nmx_workflow = pl.get(NMXMtzDataFrame)\n",
+    "scaling_nmx_workflow = pl.get(WavelengthBinned)\n",
     "scaling_nmx_workflow.visualize(graph_attr={\"rankdir\": \"LR\"})"
    ]
   },
@@ -102,8 +105,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df = scaling_nmx_workflow.compute(NMXMtzDataFrame)\n",
-    "merged_df.head()"
+    "binned = scaling_nmx_workflow.compute(WavelengthBinned)\n",
+    "binned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipp as sc\n",
+    "from ess.nmx.scaling import get_reference_bin\n",
+    "\n",
+    "ref = get_reference_bin(binned)\n",
+    "ref"
    ]
   }
  ],
