Update scale factor example.

--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -115,11 +115,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipp as sc\n",
-    "from ess.nmx.scaling import get_reference_bin\n",
+    "from ess.nmx.scaling import get_reference_bin, calculate_scale_factor_per_hkl_eq\n",
     "\n",
-    "ref = get_reference_bin(binned)\n",
-    "ref"
+    "scale_factor = calculate_scale_factor_per_hkl_eq(get_reference_bin(binned))\n",
+    "scale_factor"
    ]
   }
  ],
