Scale per wavelength per HKL.

--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -56,7 +56,7 @@
     "from ess.nmx.mtz_io import mtz_io_providers, mtz_io_params\n",
     "from ess.nmx.mtz_io import MTZFileIndex, SpaceGroupDesc\n",
     "from ess.nmx.scaling import scaling_providers\n",
-    "from ess.nmx.scaling import WavelengthBinSize, WavelengthBinned\n",
+    "from ess.nmx.scaling import WavelengthBinSize, WavelengthScaled\n",
     "\n",
     "pl = sl.Pipeline(\n",
     "    providers=mtz_io_providers+scaling_providers,\n",
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaling_nmx_workflow = pl.get(WavelengthBinned)\n",
+    "scaling_nmx_workflow = pl.get(WavelengthScaled)\n",
     "scaling_nmx_workflow.visualize(graph_attr={\"rankdir\": \"LR\"})"
    ]
   },
@@ -105,20 +105,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binned = scaling_nmx_workflow.compute(WavelengthBinned)\n",
-    "binned"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ess.nmx.scaling import get_reference_bin, calculate_scale_factor_per_hkl_eq\n",
-    "\n",
-    "scale_factor = calculate_scale_factor_per_hkl_eq(get_reference_bin(binned))\n",
-    "scale_factor"
+    "scaled = scaling_nmx_workflow.compute(WavelengthScaled)\n",
+    "scaled"
    ]
   }
  ],
