--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -55,7 +55,7 @@
     "import sciline as sl\n",
     "from ess.nmx.mtz_io import mtz_io_providers, mtz_io_params\n",
     "from ess.nmx.mtz_io import MTZFileIndex, SpaceGroupDesc\n",
-    "from ess.nmx.scaling import scaling_providers\n",
+    "from ess.nmx.scaling import scaling_providers, CuttingWavelengthEdgeProportion\n",
     "from ess.nmx.scaling import WavelengthBinSize, WavelengthScaled\n",
     "\n",
     "pl = sl.Pipeline(\n",
@@ -63,6 +63,7 @@
     "    params={\n",
     "        SpaceGroupDesc: \"C 1 2 1\",  # Replace with the correct space group if needed\n",
     "        WavelengthBinSize: 50,  # Replace with the correct bin size if needed\n",
+    "        CuttingWavelengthEdgeProportion: 0.25,\n",
     "        **mtz_io_params\n",
     "    },\n",
     ")\n",
@@ -107,6 +108,17 @@
    "source": [
     "scaled = scaling_nmx_workflow.compute(WavelengthScaled)\n",
     "scaled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ess.nmx.scaling import cut_edges\n",
+    "\n",
+    "cut_edges(scaled, 0.25)"
    ]
   }
  ],
