Add quad root stadard deviation cutting.

--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -55,15 +55,16 @@
     "import sciline as sl\n",
     "from ess.nmx.mtz_io import mtz_io_providers, mtz_io_params\n",
     "from ess.nmx.mtz_io import MTZFileIndex, SpaceGroupDesc\n",
-    "from ess.nmx.scaling import scaling_providers, CuttingWavelengthEdgeProportion\n",
-    "from ess.nmx.scaling import WavelengthBinSize, WavelengthScaled\n",
+    "from ess.nmx.scaling import scaling_providers, WavelengthEdgeCut\n",
+    "from ess.nmx.scaling import WavelengthBinSize, WavelengthScaled, FilteredIntensity, QuadRootStadardDeviationCut\n",
     "\n",
     "pl = sl.Pipeline(\n",
     "    providers=mtz_io_providers+scaling_providers,\n",
     "    params={\n",
     "        SpaceGroupDesc: \"C 1 2 1\",  # Replace with the correct space group if needed\n",
     "        WavelengthBinSize: 50,  # Replace with the correct bin size if needed\n",
-    "        CuttingWavelengthEdgeProportion: 0.25,\n",
+    "        WavelengthEdgeCut: 0.25,\n",
+    "        QuadRootStadardDeviationCut: 2,\n",
     "        **mtz_io_params\n",
     "    },\n",
     ")\n",
@@ -89,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaling_nmx_workflow = pl.get(WavelengthScaled)\n",
+    "scaling_nmx_workflow = pl.get(FilteredIntensity)\n",
     "scaling_nmx_workflow.visualize(graph_attr={\"rankdir\": \"LR\"})"
    ]
   },
@@ -116,9 +117,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ess.nmx.scaling import cut_edges\n",
-    "\n",
-    "cut_edges(scaled, 0.25)"
+    "filtered_intensity = scaling_nmx_workflow.compute(FilteredIntensity)\n",
+    "filtered_intensity"
    ]
   }
  ],
