--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -56,7 +56,7 @@
     "from ess.nmx.mtz_io import mtz_io_providers, mtz_io_params\n",
     "from ess.nmx.mtz_io import MTZFileIndex, SpaceGroupDesc\n",
     "from ess.nmx.scaling import scaling_providers, WavelengthEdgeCut\n",
-    "from ess.nmx.scaling import WavelengthBinSize, WavelengthScaled, FilteredIntensity, QuadRootStadardDeviationCut\n",
+    "from ess.nmx.scaling import WavelengthBinSize, ScaledIntensity, FilteredIntensity, QuadRootStadardDeviationCut\n",
     "\n",
     "pl = sl.Pipeline(\n",
     "    providers=mtz_io_providers+scaling_providers,\n",
@@ -64,7 +64,7 @@
     "        SpaceGroupDesc: \"C 1 2 1\",  # Replace with the correct space group if needed\n",
     "        WavelengthBinSize: 50,  # Replace with the correct bin size if needed\n",
     "        WavelengthEdgeCut: 0.25,\n",
-    "        QuadRootStadardDeviationCut: 2,\n",
+    "        QuadRootStadardDeviationCut: 2.,\n",
     "        **mtz_io_params\n",
     "    },\n",
     ")\n",
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaled = scaling_nmx_workflow.compute(WavelengthScaled)\n",
+    "scaled = scaling_nmx_workflow.compute(ScaledIntensity)\n",
     "scaled"
    ]
   },
@@ -119,6 +119,15 @@
    "source": [
     "filtered_intensity = scaling_nmx_workflow.compute(FilteredIntensity)\n",
     "filtered_intensity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaling_nmx_workflow.compute(ScaledIntensity)"
    ]
   }
  ],
