Update names and docstrings.

--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -115,10 +115,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ess.nmx.scaling import get_reference_bin, estimate_scale_factor_per_hkl_asu_from_reference_bin\n",
+    "from ess.nmx.scaling import get_reference_intensities, estimate_scale_factor_per_hkl_asu_from_reference\n",
     "\n",
-    "scale_factor = estimate_scale_factor_per_hkl_asu_from_reference_bin(get_reference_bin(binned))\n",
+    "scale_factor = estimate_scale_factor_per_hkl_asu_from_reference(get_reference_intensities(binned))\n",
     "scale_factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipp as sc\n",
+    "from ess.nmx.scaling import get_reference_intensities, ReferenceWavelength\n",
+    "\n",
+    "get_reference_intensities(binned, ReferenceWavelength(sc.scalar(3, unit=sc.units.angstrom)))"
    ]
   }
  ],
