--- a/docs/examples/scaling_workflow.ipynb
+++ b/docs/examples/scaling_workflow.ipynb
@@ -53,16 +53,19 @@
    "outputs": [],
    "source": [
     "import sciline as sl\n",
+    "import scipp as sc\n",
+    "\n",
     "from ess.nmx.mtz_io import mtz_io_providers, mtz_io_params\n",
     "from ess.nmx.mtz_io import MTZFileIndex, SpaceGroupDesc\n",
     "from ess.nmx.scaling import scaling_providers\n",
-    "from ess.nmx.scaling import WavelengthBinSize, WavelengthBinned\n",
+    "from ess.nmx.scaling import WavelengthBinSize, WavelengthBinned, ReferenceWavelength\n",
     "\n",
     "pl = sl.Pipeline(\n",
     "    providers=mtz_io_providers+scaling_providers,\n",
     "    params={\n",
     "        SpaceGroupDesc: \"C 1 2 1\",  # Replace with the correct space group if needed\n",
     "        WavelengthBinSize: 50,  # Replace with the correct bin size if needed\n",
+    "        ReferenceWavelength: sc.scalar(3, unit=sc.units.angstrom),  # Remove it if you want to use the middle of the bin\n",
     "        **mtz_io_params\n",
     "    },\n",
     ")\n",
@@ -117,20 +120,7 @@
    "source": [
     "from ess.nmx.scaling import get_reference_intensities, estimate_scale_factor_per_hkl_asu_from_reference\n",
     "\n",
-    "scale_factor = estimate_scale_factor_per_hkl_asu_from_reference(get_reference_intensities(binned))\n",
-    "scale_factor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipp as sc\n",
-    "from ess.nmx.scaling import get_reference_intensities, ReferenceWavelength\n",
-    "\n",
-    "get_reference_intensities(binned, ReferenceWavelength(sc.scalar(3, unit=sc.units.angstrom)))"
+    "estimate_scale_factor_per_hkl_asu_from_reference(get_reference_intensities(binned))"
    ]
   }
  ],
